# ContextFreeGrammarLab

Sources/: CMakeLists.txt
Sources/ContextFreeGrammar/: CMakeLists.txt  ContextFreeGrammar.cpp  ContextFreeGrammar.h  GrammarSymbol.h  NonterminalSymbol.h  Rule.h  TerminalSymbol.h  Utils.cpp  Utils.h  cfg_api.h
Sources/ContextFreeGrammarClient/: CMakeLists.txt  CfgAlgoRunner.rep  Client.cpp  Client.h  ClientUI.cpp  ClientUI.h  ClientUI.ui  ContextFreeGrammarClient.qrc  main.cpp  rep_CfgAlgoRunner_replica.h
Sources/ContextFreeGrammarLab/: CMakeLists.txt  CfgAlgoRunner.cpp  CfgAlgoRunner.h  main.cpp  rep_CfgAlgoRunner_source.h
